<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CamTestActivity!</string>
    <string name="app_name">CameraExample</string>
    <string name="title_activity_add">Add product</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="set_barcode">Set barcode</string>
    <string name="set_logo">Set logo</string>
    <string name="add_text">Add text</string>
    <string name="send">Send</string>

</resources>
